<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidCare</string>
    <!-- <string name="base_url">http://192.168.2.28:8080/</string> -->
    <!-- <string name="base_url">http://devandroidcare2.appspot.com/</string> -->
    <string name="base_url">http://www.androidcare.org/</string>

    <!-- General -->
    <string name="error">Error</string>
    <string name="open_account_settings">Open settings</string>
    <string name="restarting_service">Restarting background service&#8230;</string>
    <string name="stopping_service">Stopping background service&#8230;</string>
    <string name="cancel">Cancel</string>
    
    <!-- Accounts -->
    <string name="account">Accounts</string>
    <string name="restart_services">Restart services</string>
    <string name="stop_services">Stop services</string>
    <string name="account_settings">Account settings</string>
    <string name="view_reminders">Reminder list</string>
    <string name="view_alarms">Alarms list</string>
    <string name="account_summary">Select a Google account</string>
    <string name="zero_accounts">Zero accounts found</string>
    <string name="setup_google_account">Please, set up a Google account</string>
    <string name="advanced">Advanced</string>
    
    <!-- Preferences -->
    <string name="services">Services</string>
    <string name="notifications">Notifications</string>
    <string name="show_connection_notification">Connection error</string>
    <string name="others">Others</string>
    <string name="sync_options">Sync Options</string>
    <string name="location_updates">Location updates</string>
    <string name="reminder_updates">Reminder updates</string>
    <string name="alarm_updates">Alarm updates</string>
    <string name="alarm_mobile_height">Height of the mobile phone</string>
    <string name="synchronization_interval">Event sync. interval</string>
    <string name="reminder_cache_time">Cache time</string>
    <string name="minute_s">minute(s)</string>
    <string name="hour_s">hour(s)</string>
    <string name="day_s">day(s)</string>
    <string name="location_service">Location service</string>
    <string name="force_gps_location_if_airplane_mode">Ignore Airplane Mode</string>
    <string name="no_calibration_found">No calibration found</string>
    <string name="calibrate_felloff_sensor">Please, calibrate the fell off sensor.</string>
    <string name="calibrate">Calibrate</string>
    
    <!-- Network -->
    <string name="not_reachable">Server not responding</string>
    <string name="message_not_sent">Message not sent</string>
    <string name="check_internet_connection">Please, check yout Internet connection</string>
    <string name="delay_reminder">Delay Reminder</string>

    <!-- Alarms -->
    <string name="SMSAlarmStartText">ANDROIDCARE: Alarm </string>
    <string name="SMSAlarmMiddleText"> triggered with priority </string>
    <string name="Cancel">Cancel</string>
    <string name="LaunchAlarm">Launch alarm</string>
    <string name="wake_up">Wake up</string>
    <string name="red_zone">Red zone</string>
    <string name="fell_off">Fell off</string>
    <string name="alarm_service">Alarm Service</string>
    <string name="use_lock_with_fell_off_alarm">Use lock with fell off alarm monitor</string>
    <string name="fellOffCalibration">Fell off calibration</string>
    <string name="calibration_instructions">Please, pick the device, extend your arm over a soft surface to avoid damage
        (like a bed), tap OK and drop it. After that, tap the button again</string>
    <string name="sensor_calibrated">Sensor calibrated successfully</string>
</resources>