<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	 <PreferenceCategory
	   android:title="@string/account_settings" >
		  <ListPreference
		     android:key="account"  
		     android:summary="@string/account_summary"
		     android:title="@string/account" />
	 </PreferenceCategory>
 	
 	<PreferenceCategory
	   android:title="@string/others" >
        <Preference
                android:key="viewReminders"
                android:title="@string/view_reminders"
                android:summary=""/>
        <Preference
                android:key="viewAlarms"
                android:title="@string/view_alarms"
                android:summary=""/>
        <Preference
                android:key="fellOffCalibration"
                android:title="@string/fellOffCalibration"
                android:summary=""/>
		  <Preference 
		      android:key="showAdvanced"
		      android:title="@string/advanced"
		      android:summary=""/>
	</PreferenceCategory>
</PreferenceScreen>